# diff-gaussian-rasterization

./: .gitignore  pyproject.toml  setup.py
diff_gaussian_rasterization/: __init__.py  wrapper.py
