[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "diff-gaussian-rasterization"
version = "0.0.0"
description = "Differential Gaussian rasterization CUDA extension from GraphDeco/Inria."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-GraphDeco-License"
authors = [
    { name = "GraphDeco / Inria" },
]
dependencies = [
    "torch",
]

license-files = ["LICENSE.md"]

[project.optional-dependencies]
cu128 = [
    "torch",
]
cu130 = [
    "torch",
]

[tool.uv]
conflicts = [
    [
        { extra = "cu128" },
        { extra = "cu130" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools]
packages = ["diff_gaussian_rasterization"]
